lintian (2.5.26) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/cruft.{desc,pm}:
    + [BR] Use license checking framework for checking php license.
      (Closes: #752540).
  * checks/changes-file.{desc,pm}:
    + [BR] Add patch from Ivo De Decker, add check for
      backports changes file.  (Closes: #732225).

  * data/debhelper/dh_commands:
    + [BR] Add patch from  Piotr Ożarowski, dh-python2
      moved to dh-python package (Closes: #740161).

  * doc/tutorial/Lintian/Tutorial/WritingChecks.pod:
    + [NT] Correct tutorial now that the "index" collection
      is gone.

 -- Niels Thykier <niels@thykier.net>  Sun, 13 Jul 2014 21:04:57 +0200

lintian (2.5.25) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - capitalization-error-in-description-synopsis
      - incorrect-naming-of-pkcs11-module
      - package-contains-thumbnails-dir
      - pkg-config-bad-directive
      - source-contains-prebuilt-ms-help-file
      - spelling-error-in-description-synopsis

  * checks/*.desc:
    + [NT] Replaced "index" with "unpacked" in Needs-Info.
  * checks/cruft.{desc,pm}:
    + [BR] Add a forgotten return statement, and avoid
      false positive for deployJava.js (Closes: #745152).
    + [BR] Fix another false positive in GFDL detection.
    + [BR] Use whitelist for know good RFC (Closes: #753970).
    + [BR]  Detect and warn about *.chm file
      (MS Windows HtmlHelp Data).  (Closes: #653910).
  * checks/description.{desc,pm}:
    + [NT] Apply patch from Anders Jonsson to check spelling
      of the package synopsis.  (Closes: #747266)
  * checks/files.{desc,pm}:
    + [RG,NT] Check for invalid named p11-kit modules in
      /usr/share/p11-kit modules.  (Closes: #741346)
    + [BR] Detect cross architecture pkg-config file.
      (Closes: #539225).
    + [BR] Add a sanity check for pkg-config files.
      (Closes: #676803, #657699).
    + [BR] Detect .thumbnails dir (Closes: #660797).
