@@ -8,6 +8,10 @@ lintian (2.5.26) UNRELEASED; urgency=medium
   * checks/changes-file.{desc,pm}:
     + [BR] Add patch from Ivo De Decker, add check for
       backports changes file.  (Closes: #732225).
+  * checks/phppear.pm:
+    + [BR] Fix a false positive for
+      missing-pkg-php-tools-addon phpcomposer, thanks to
+      David Prévot (Closes: #754738).
 
   * data/debhelper/dh_commands:
     + [BR] Add patch from  Piotr Ożarowski, dh-python2
